--- a/root/Achievements.html
+++ b/root/Achievements.html
@@ -59,26 +59,26 @@
           <ul class="lists" style="list-style-type: none">
             <li>
               Projects :
-              <li><a href="https://github.com/rajarajan2013/networksproject" target="_blank">Mini project : Network setup in a university using CISCO packet tracer</a></li>
             </li>
+              <li><a href="https://github.com/rajarajan2013/networksproject" target="_blank">Mini project : Network setup in a university using CISCO packet tracer</a></li>
             <li>
               Courses :
+            </li>
               <li><a href="image/aws.jpg" target="_blank">Aws course : AWS Academy Cloud Operations </a></li>
               <li><a href="image/js udemy certif.jpg" target="_blank">International course : The Complete JavaScript Course 2023: From Zero to Expert!</a></li>
-              <li><a href="image/java certif.png" target="_blank">Hackerrank Certificate : Java </li>
-            </li>
+              <li><a href="image/java certif.png" target="_blank">Hackerrank Certificate : Java </a></li>
             <li>
               Prizes :
-              <li>Team Leader, Won first place in Football Tournament – CTECH SPORTS 2022, University Level</li>
-              <li>Won Best Project Award – Mernstack Development</li>
+            </li>
+              <li>Team Leader, Won first place in Football Tournament CTECH SPORTS 2022, University Level</li>
+              <li>Won Best Project Award  Mernstack Development</li>
             <li>
               Workshops Attended:
             </li>
-            <li> 6-days Workshop on Mernstack Development from 8th AUG 2022 to 13th AUG 2022</li>
+            <li>6-days Workshop on Mernstack Development from 8th AUG 2022 to 13th AUG 2022</li>
             <li>3 days Workshop on "Fullstack Development with DEVOPS from 1st SEP to 3rd SEP 2022</li>
             <li>Workshop on “Getting Started As An Entrepreneur</li>
             <li>Attended NSS Camp from 29th AUG to 1st SEP 2022</li>
-            </li>
           </ul>
         </div>
       </div>
