--- a/root/index.html
+++ b/root/index.html
@@ -6,6 +6,12 @@
     <link href="css/styling.css" rel="stylesheet" : />
     <link rel="icon" href="srm logo.png" />
   </head>
+  <style>
+    .lists{
+      padding: 50px;
+    }
+  </style>
+
   <body>
     <h1>My Portfolio - " I'm Rajarajan K "</h1>
     <div class="flexy">
